# envee

./: CHANGES.rst  LICENSE  README.md  pyproject.toml  requirements-ci.in  requirements-ci.txt  requirements-dev.txt  setup.cfg
.github/: dependabot.yml
.github/workflows/: check.yml  publish.yml
easyenv/: __init__.py
envee/: __init__.py  envee.py
readenv/: __init__.py  readenv.py
tests/: test_easyenv.py  test_envee.py  test_readenv.py
