[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "envee"
dynamic = ["version"]
description = "Read variables from environment or files into dataclasses"
readme = "README.md"
authors = [{ name = "René Buffat", email = "rene@ctechnology.io" }]
keywords = [
    "env",
    "environment variables",
    "docker secrets",
    "settings",
    ".env",
    "dotenv"
]
license = { text = "BSD 3-Clause License" }
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = ['typing_extensions>=4.1.1; python_version < "3.11"']

[project.urls]
Homepage = "https://github.com/c-technology/envee"

[tool.setuptools]
license-files = ["LICENSE"]
py-modules = ["envee"]

[tool.setuptools.dynamic]
version = { attr = "envee.__version__" }

[tool.setuptools.packages.find]
exclude = [".github*", ".gitignore", "tests*"]
include = ["envee"]

[tool.setuptools.package-data]
envee = ["py.typed"]

[tool.black]
target-version = ["py38", "py39", "py310", "py311"]
line-length = 88

[tool.isort]
profile = "black"
multi_line_output = 3
